--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=${APP_PROFILE:test}
 
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
 
 security.oauth2.client.client-id=${CLIENT_ID:myclientid}
 security.oauth2.client.client-secret=${CLIENT_SECRET:myclientsecret}
